--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,10 @@ requires = [
 ]
 build-backend = "setuptools.build_meta"
 
+[tools.setuptools_scm]
+write_to = "src/jomiel_comm/__init__.py"
+write_to_template = "__version__ = {version!r}"
+
 [tool.black]
 target-version = ['py38']
 line-length = 72
