build: setup.cfg: add [options]

--- a/setup.cfg
+++ b/setup.cfg
@@ -19,3 +19,15 @@ classifiers =
     Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
+
+[options]
+packages = find:
+package_dir = =src
+include_package_data = true
+python_requires = >=3.6
+install_requires =
+    jomiel-messages
+    pyzmq
+    ruamel.yaml
+    uson
+zip_safe = true
