--- a/setup.cfg
+++ b/setup.cfg
@@ -29,7 +29,7 @@ install_requires =
     jomiel-messages
     pyzmq
     ruamel.yaml
-    uson
+    ujson
 zip_safe = true
 
 # [options.extras_require]
